--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file is for our proposal notebook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Bank Marketing Data Set Group Project Proposal\n",
     "##### By: Alex Khadra, Shay Tannne, Liam Buchan, Tanaya Parakh"
    ]
@@ -22,7 +15,7 @@
     "### Introduction:\n",
     "The data set we are working on is the bank marketing data set. The bank we are analyzing is a Portuguese banking institution with data related with direct marketing campaigns (phone calls). \n",
     "\n",
-    "The classification goal for this project, is to predict if the client will subscribe a term deposit. A term deposit is a cash investment held at a financial institution. Your money is invested for an agreed rate of interest over a fixed amount of time, or term. Term deposits can be invested into a bank, building society or credit union (in our case the Portuguese banking institution).\n",
+    "The goal of this project, is to find which variables best predict if the client will subscribe a term deposit. A term deposit is a cash investment held at a financial institution. Your money is invested for an agreed rate of interest over a fixed amount of time, or term. Term deposits can be invested into a bank, building society or credit union (in our case the Portuguese banking institution).\n",
     "\n",
     "Our data set includes: \n",
     "- age \n",
@@ -43,7 +36,7 @@
     "- poutcome \n",
     "- \"y\" (where \"y\" is whether or not they got a term deposit)\n",
     "\n",
-    "Throughout the project we will look at all the variables and see how they relate to clients subscribing to a term deposit, and figure out how to best predict whether or not a client will subscribe a term deposit."
+    "Throughout the project we will look at all the variables and see how they relate to clients subscribing to a term deposit. We will than find which variables have the greatest influence on predicting whether or not a client will subscribe a term deposit.\n"
    ]
   },
   {
