--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -487,7 +487,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bank_all <- bank_all_cols %>%\n",
+    "    select(-c(default, contact, duration))\n",
+    "bank_all"
+   ]
   }
  ],
  "metadata": {
