--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -109,13 +109,14 @@
     }
    ],
    "source": [
+    "# load dataset\n",
     "bank_full <- read_delim(\"data/bank-full.csv\", delim = ';')\n",
     "slice(bank_full, 1:5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
     }
    ],
    "source": [
-    "# convert all to numbers and NA\n",
+    "# convert values to numbers and NA for unknown values\n",
     "\n",
     "bank_fixed = bank_full\n",
     "bank_fixed = mutate(bank_fixed, across(where(is.character), ~na_if(., \"unknown\")))\n",
@@ -197,6 +198,7 @@
     "bank_fixed$month = as.numeric(as.factor(bank_fixed$month))\n",
     "bank_fixed$poutcome = as.numeric(as.factor(bank_fixed$poutcome))\n",
     "bank_fixed$y = as.numeric(as.factor(bank_fixed$y))\n",
+    "bank_fixed = mutate(bank_fixed, y = as_factor(y))\n",
     "slice(bank_fixed, 1:5)"
    ]
   },
@@ -218,13 +220,14 @@
     }
    ],
    "source": [
+    "# install resources for corelation table\n",
     "install.packages(\"corrplot\")\n",
     "source(\"http://www.sthda.com/upload/rquery_cormat.r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -385,21 +388,13 @@
     }
    ],
    "source": [
+    "# print corelation table\n",
     "rquery.cormat(bank_fixed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bank_factor = mutate(bank_fixed, y = as_factor(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +416,7 @@
       "text/plain": [
        "parsnip model object\n",
        "\n",
-       "Fit time:  398ms \n",
+       "Fit time:  395ms \n",
        "\n",
        "Call:\n",
        "kknn::train.kknn(formula = y ~ age:poutcome, data = data, ks = 5,     kernel = ~\"rectangular\")\n",
@@ -437,6 +432,7 @@
     }
    ],
    "source": [
+    "# create knn model\n",
     "knn_spec = nearest_neighbor(weight_func = \"rectangular\") %>%\n",
     "       set_engine(\"kknn\") %>%\n",
     "       set_mode(\"classification\")\n",
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -495,9 +491,10 @@
     }
    ],
    "source": [
+    "# test knn model (not nessisary just want to make sure it works)\n",
+    "\n",
     "# age = 58, job = \"management\", marital = \"married\", education = \"tertiary\", default = \"no\", balance = 2143, housing = \"yes\", loan = \"no\", contact = \"unknown\", day = 5,\n",
     "#    month = \"may\", duration = 261, campaign = 1, pdays = -1, previous = 0, poutcome = \"unknown\"\n",
-    "\n",
     "new_obs <- tibble(age = 58, job = 5, marital = 2, education = 3, default = 1, balance = 2143, housing = 2, loan = 1, contact = NA,\n",
     "                  day = 5, month = 9, duration = 261, campaign = 1, pdays = NA, previous = 0, poutcome = 4)\n",
     "\n",
@@ -507,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
