--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -290,95 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 10 × 14</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>age</th><th scope=col>job</th><th scope=col>marital</th><th scope=col>education</th><th scope=col>balance</th><th scope=col>housing</th><th scope=col>loan</th><th scope=col>day</th><th scope=col>month</th><th scope=col>campaign</th><th scope=col>pdays</th><th scope=col>previous</th><th scope=col>poutcome</th><th scope=col>y</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>58</td><td>management  </td><td>married </td><td>tertiary </td><td>2143</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>44</td><td>technician  </td><td>single  </td><td>secondary</td><td>  29</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>33</td><td>entrepreneur</td><td>married </td><td>secondary</td><td>   2</td><td>yes</td><td>yes</td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>47</td><td>blue-collar </td><td>married </td><td>unknown  </td><td>1506</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>33</td><td>unknown     </td><td>single  </td><td>unknown  </td><td>   1</td><td>no </td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>35</td><td>management  </td><td>married </td><td>tertiary </td><td> 231</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>28</td><td>management  </td><td>single  </td><td>tertiary </td><td> 447</td><td>yes</td><td>yes</td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>42</td><td>entrepreneur</td><td>divorced</td><td>tertiary </td><td>   2</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>58</td><td>retired     </td><td>married </td><td>primary  </td><td> 121</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "\t<tr><td>43</td><td>technician  </td><td>single  </td><td>secondary</td><td> 593</td><td>yes</td><td>no </td><td>5</td><td>may</td><td>1</td><td>-1</td><td>0</td><td>unknown</td><td>no</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 10 × 14\n",
-       "\\begin{tabular}{llllllllllllll}\n",
-       " age & job & marital & education & balance & housing & loan & day & month & campaign & pdays & previous & poutcome & y\\\\\n",
-       " <dbl> & <chr> & <chr> & <chr> & <dbl> & <chr> & <chr> & <dbl> & <chr> & <dbl> & <dbl> & <dbl> & <chr> & <chr>\\\\\n",
-       "\\hline\n",
-       "\t 58 & management   & married  & tertiary  & 2143 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 44 & technician   & single   & secondary &   29 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 33 & entrepreneur & married  & secondary &    2 & yes & yes & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 47 & blue-collar  & married  & unknown   & 1506 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 33 & unknown      & single   & unknown   &    1 & no  & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 35 & management   & married  & tertiary  &  231 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 28 & management   & single   & tertiary  &  447 & yes & yes & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 42 & entrepreneur & divorced & tertiary  &    2 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 58 & retired      & married  & primary   &  121 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\t 43 & technician   & single   & secondary &  593 & yes & no  & 5 & may & 1 & -1 & 0 & unknown & no\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 10 × 14\n",
-       "\n",
-       "| age &lt;dbl&gt; | job &lt;chr&gt; | marital &lt;chr&gt; | education &lt;chr&gt; | balance &lt;dbl&gt; | housing &lt;chr&gt; | loan &lt;chr&gt; | day &lt;dbl&gt; | month &lt;chr&gt; | campaign &lt;dbl&gt; | pdays &lt;dbl&gt; | previous &lt;dbl&gt; | poutcome &lt;chr&gt; | y &lt;chr&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 58 | management   | married  | tertiary  | 2143 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 44 | technician   | single   | secondary |   29 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 33 | entrepreneur | married  | secondary |    2 | yes | yes | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 47 | blue-collar  | married  | unknown   | 1506 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 33 | unknown      | single   | unknown   |    1 | no  | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 35 | management   | married  | tertiary  |  231 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 28 | management   | single   | tertiary  |  447 | yes | yes | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 42 | entrepreneur | divorced | tertiary  |    2 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 58 | retired      | married  | primary   |  121 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "| 43 | technician   | single   | secondary |  593 | yes | no  | 5 | may | 1 | -1 | 0 | unknown | no |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "   age job          marital  education balance housing loan day month campaign\n",
-       "1  58  management   married  tertiary  2143    yes     no   5   may   1       \n",
-       "2  44  technician   single   secondary   29    yes     no   5   may   1       \n",
-       "3  33  entrepreneur married  secondary    2    yes     yes  5   may   1       \n",
-       "4  47  blue-collar  married  unknown   1506    yes     no   5   may   1       \n",
-       "5  33  unknown      single   unknown      1    no      no   5   may   1       \n",
-       "6  35  management   married  tertiary   231    yes     no   5   may   1       \n",
-       "7  28  management   single   tertiary   447    yes     yes  5   may   1       \n",
-       "8  42  entrepreneur divorced tertiary     2    yes     no   5   may   1       \n",
-       "9  58  retired      married  primary    121    yes     no   5   may   1       \n",
-       "10 43  technician   single   secondary  593    yes     no   5   may   1       \n",
-       "   pdays previous poutcome y \n",
-       "1  -1    0        unknown  no\n",
-       "2  -1    0        unknown  no\n",
-       "3  -1    0        unknown  no\n",
-       "4  -1    0        unknown  no\n",
-       "5  -1    0        unknown  no\n",
-       "6  -1    0        unknown  no\n",
-       "7  -1    0        unknown  no\n",
-       "8  -1    0        unknown  no\n",
-       "9  -1    0        unknown  no\n",
-       "10 -1    0        unknown  no"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in bank_full %>% select(-c(default, contact, duration)): could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in bank_full %>% select(-c(default, contact, duration)): could not find function \"%>%\"\nTraceback:\n"
+     ]
     }
    ],
    "source": [
@@ -414,44 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "      age            job              marital           education        \n",
-       " Min.   :18.00   Length:33909       Length:33909       Length:33909      \n",
-       " 1st Qu.:33.00   Class :character   Class :character   Class :character  \n",
-       " Median :39.00   Mode  :character   Mode  :character   Mode  :character  \n",
-       " Mean   :40.87                                                           \n",
-       " 3rd Qu.:48.00                                                           \n",
-       " Max.   :95.00                                                           \n",
-       "    balance        housing              loan                day       \n",
-       " Min.   :-4057   Length:33909       Length:33909       Min.   : 1.00  \n",
-       " 1st Qu.:   73   Class :character   Class :character   1st Qu.: 8.00  \n",
-       " Median :  444   Mode  :character   Mode  :character   Median :16.00  \n",
-       " Mean   : 1362                                         Mean   :15.81  \n",
-       " 3rd Qu.: 1428                                         3rd Qu.:21.00  \n",
-       " Max.   :98417                                         Max.   :31.00  \n",
-       "    month              campaign          pdays           previous      \n",
-       " Length:33909       Min.   : 1.000   Min.   : -1.00   Min.   : 0.0000  \n",
-       " Class :character   1st Qu.: 1.000   1st Qu.: -1.00   1st Qu.: 0.0000  \n",
-       " Mode  :character   Median : 2.000   Median : -1.00   Median : 0.0000  \n",
-       "                    Mean   : 2.775   Mean   : 40.07   Mean   : 0.5729  \n",
-       "                    3rd Qu.: 3.000   3rd Qu.: -1.00   3rd Qu.: 0.0000  \n",
-       "                    Max.   :63.000   Max.   :871.00   Max.   :58.0000  \n",
-       "   poutcome              y            \n",
-       " Length:33909       Length:33909      \n",
-       " Class :character   Class :character  \n",
-       " Mode  :character   Mode  :character  \n",
-       "                                      \n",
-       "                                      \n",
-       "                                      "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in summary(bank_training): object 'bank_training' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in summary(bank_training): object 'bank_training' not found\nTraceback:\n",
+      "1. summary(bank_training)"
+     ]
     }
    ],
    "source": [
