typos, mistakes in visualization, wording

--- a/report.ipynb
+++ b/report.ipynb
@@ -12,9 +12,9 @@
    "metadata": {},
    "source": [
     "## Introduction:\n",
-    "The data set we are working on is the bank marketing data set. The bank we are analyzing is a Portuguese banking institution with data related with direct marketing campaigns (phone calls).\n",
+    "For this project, we are working with a bank marketing dataset. The bank we are analyzing is a Portuguese banking institution with data related with *direct marketing campaigns* (phone calls).\n",
     "\n",
-    "This dataset contains many variables as shown when we load the file below. However some of the more cryptic variables are defined here:\n",
+    "This dataset contains many variables as shown when we load the file below. However variables that are not self explanatory are defined here:\n",
     "\n",
     "- `default` - Has credit in default?\n",
     "- `balance` - Account balance (EUR)\n",
@@ -28,7 +28,8 @@
     "- `poutcome` - Outcome of the previous marketing campaign\n",
     "- `y` - Has the client subscribed a term deposit?\n",
     "\n",
-    "Using this dataset we will attempt to answer the question \"Which variables have the greatest influence on predicting whether or not a client will subscribe a term deposit?\" A term deposit is a cash investment held at a financial institution. Your money is invested for an agreed rate of interest over a fixed amount of time, or term.\n",
+    "The dataset is aimed at characterizing customers who would opt in to a service to make further predictions and optimize marketing strategies.\n",
+    "Using this dataset we will attempt to answer the question \"which variables have the greatest influence on predicting whether or not a customer will subscribe a term deposit?\" A term deposit is a cash investment held at a financial institution. Your money is invested for an agreed rate of interest over a fixed amount of time, or term.\n",
     "\n",
     "Based on our existing knowledge of the space we believe that balance will be the greatest predictor."
    ]
@@ -39,7 +40,7 @@
    "source": [
     "## Method:\n",
     "\n",
-    "Throughout this project we explain step by step the method we use. In a short summary, we first obtain, clean, and mutate the data to make all the variables numeric to be able to properly use the KNN algorithm and create a correlation table. For the KNN algorithm We create models, specifications, and a best fit for each individual separately and we see which variable yields the highest accuracy as a predictor. We then back our evidence through different graphs to come up with our conclusion. After performing these steps on the data however we were still left with inconlusive results so we decided to do some research ourselves and use some algroithms we had not learned in class to find an answer to our question. For a more detailed description of our method, read along our step by step procedure."
+    "This section will explain and demonstrate the method we used to arrive at conclusions based on the available data, in a step-by-step manner. We first obtain the data, clean it, and mutate parts of it to make all the variables numeric, in order to properly use a classification algorithm. We ran the KNN algorithm and created a correlation table. For the KNN algorithm, we created models, specifications, and a best fit criterion for each observation separately, and saw which variable yielded the highest accuracy as a predictor. We then displayed the evidence through different graphs to come up with our conclusion. After performing these steps on the data, however, we were still left with inconlusive results so we decided to do some research ourselves and use some algroithms we had not learned in class, to solidify our answer to the question. For a more detailed description of our method, read along our step by step procedure."
    ]
   },
   {
@@ -209,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We decide to filter out the columns we thought would not play any relationship to whether or not a client subscribed a term deposit or were very difficult to deal with using algorithm. We removed all columns related to date, method of communication, and whether they had defaulted. "
+    "We decided limit the scope of our analysis and filter out the columns we believed do not represent meaningful predictors on whether or not a customer subscribed a term deposit. We also excluded variables that were very difficult to deal with using the KNN algorithm. We removed all columns related to date, method of communication, and whether the customer had defaulted. "
    ]
   },
   {
@@ -368,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we will convert all of our variables into numbers (enums for class varaibles) for our KNN models below."
+    "Next we convert all of our variables into numbers (enums for class varaibles) for our KNN models below."
    ]
   },
   {
@@ -462,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We split the dataset into the appropriate training and testing set to verify the authenticity of our results."
+    "We split the dataset into the appropriate training and testing set to verify the accuracy of our results."
    ]
   },
   {
