--- a/report.ipynb
+++ b/report.ipynb
@@ -564,7 +564,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we create a corelation table for our dataset. This will tell us which variables are most related which we can use to indentify what has the greatest impact on our outcome (`y`)."
+    "Finally we create a corelation table for our dataset. This will tell us which variables are most related which we can use to indentify what has the greatest impact on our outcome (`y`).\n",
+    "\n",
+    "Please ignore the text printout directly above the following diagram."
    ]
   },
   {
@@ -706,16 +708,16 @@
    "source": [
     "We can see from the correlation table (Viz. 1) that most variables seem to have little influence on our `y` value. The only variable with a significant impact on the outcome was `duration` which had a strong positive correlation of around 0.4.\n",
     "\n",
-    "To further test our correlation table results we test each variables influence on the outcome using knn classification."
+    "To further test our correlation table results we test each variables influence on the outcome using KNN classification."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Checking variable influence using KNN.\n",
+    "### Checking variable influence using KNN.\n",
     "\n",
-    "To do this we first create a specification for our knn classification model."
+    "To do this we first create a specification for our KNN classification model."
    ]
   },
   {
@@ -751,6 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Than we predict the accuracy of a model using all variables to get a baseline accuracy.\n",
     "\n",
     "To do this we scale all our predictor as knn is sensitive to sacle and than create a workflow and compare the results of our training table model to our testing model which will tell us the accuracy of it."
@@ -1594,9 +1597,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Further Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Because of this we decided to do some further testing on our dataset. Using some more advanced methods we found online we tried to see if we could leverage more ML algorithms to find the most influential predictors. These aren't things we covered in class so our knowledge on them is limited but we thought it may provide some interesting insight and was worth trying.\n",
     "\n",
-    "To use these algorithms we first have to replace all the unknown values with `NA` so they don't affect our results. We also made sure to change some of our true/false yes/no type columns to 1 or 0 for faster processing."
+    "To use these algorithms we first have to replace all the unknown values with `NA` so they don't affect our results. We also made sure to change some of our *true/false* and *yes/no* type columns to 1 or 0 for faster processing."
    ]
   },
   {
@@ -1904,10 +1914,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From creating and using different specifications, recipes, visualizations, and algorithms we found that only duration and marriage truly predicted better than the other predictors. All other variables yielded to approximately the same accuracy, and as our correlation table suggests, none of the variables seemed to correlate to `y` significantly. For all variables apart from duration and marriage, although the variables have a slight change in accuracy in our prediction, the accuracy is not sufficient enough to stand out.\n",
+    "From creating and using different specifications, recipes, visualizations, and algorithms we found that only **duration** and **marriage** truly predicted better than the other predictors. All other variables yielded to approximately the same accuracy, and as our correlation table suggests, none of the variables seemed to correlate to `y` significantly. For all variables apart from duration and marriage, although the variables have a slight change in accuracy in our prediction, the accuracy is not sufficient enough to stand out.\n",
     "\n",
     "This is not fully what we expected as we thought that one’s balance would be a clear indicator of subscribing to a term deposit. It turned out that one’s balance had about the same accuracy in predicting our model as all the other predictor variables apart from duration and marriage.\n",
-    "Although we did not come to the conclusion expected, seeing that subscribing to a term deposit has no correlation with one’s balance, it may raise the question on what type of saving/investing do have a correlation with balance. If the “rich” people are not investing in term deposits that what are they investing in and what are the advantages and disadvantages of that? We can also ask \"Why does duration have an effect on subscribing to a term deposit, and is it a cause-and-effect relationship?\" This leads to asking ourselves, \"Is there a third variable that links duration and subscribing or does one cause the other?\"\n",
+    "Although we did not come to the conclusion expected, seeing that subscribing to a term deposit has no correlation with one’s balance, it may raise the question on what type of saving/investing do have a correlation with balance. If the “rich” people are not investing in term deposits that what are they investing in and what are the advantages and disadvantages of that? We can also ask \"why does duration have an effect on subscribing to a term deposit, and is it a cause-and-effect relationship?\" This leads to asking ourselves, \"is there a third variable that links duration and subscribing or does one cause the other?\"\n",
     "\n",
     "The results of this project could indicate to banks that when marketing term deposits there is no need to market towards someone with high/low balance and they should focus on the duration factor. These results could possibly suggest that subscribing to term deposits may not be a complicated procedure as all the predictor variables have a very wide range. People of many ages, different balances, etc., have all subscribed to term deposits and thus it may be an easy way to invest for anyone no matter your age, job, balance, etc. This also suggest that they are risk free, which we later confirmed form the site https://www.islandsavings.ca/simple-advice/investing-advice/term-deposits-guide"
    ]
@@ -1918,17 +1928,17 @@
    "source": [
     "## References\n",
     "\n",
-    "UCI Machine Learning Repository: Bank Marketing Data Set. (n.d.). https://archive.ics.uci.edu/ml/datasets/Bank+Marketing. \n",
+    "1. UCI Machine Learning Repository: Bank Marketing Data Set. (n.d.). https://archive.ics.uci.edu/ml/datasets/Bank+Marketing. \n",
     "\n",
-    "Carroll, R. J., & Pederson, S. (1993). On robustness in the logistic regression model. *Journal of the Royal Statistical Society: Series B (Methodological), 55*(3), 693-706. doi:10.1111/j.2517-6161.1993.tb01934.x\n",
+    "2. Carroll, R. J., & Pederson, S. (1993). On robustness in the logistic regression model. *Journal of the Royal Statistical Society: Series B (Methodological), 55*(3), 693-706. doi:10.1111/j.2517-6161.1993.tb01934.x\n",
     "\n",
-    "Svetnik, V., Liaw, A., Tong, C., Culberson, J. C., Sheridan, R. P., & Feuston, B. P. (2003). Random forest: A classification and regression tool for Compound classification and QSAR Modeling. *Journal of Chemical Information and Computer Sciences, 43*(6), 1947-1958. doi:10.1021/ci034160g\n",
+    "3. Svetnik, V., Liaw, A., Tong, C., Culberson, J. C., Sheridan, R. P., & Feuston, B. P. (2003). Random forest: A classification and regression tool for Compound classification and QSAR Modeling. *Journal of Chemical Information and Computer Sciences, 43*(6), 1947-1958. doi:10.1021/ci034160g\n",
     "\n",
-    "Chen, J. (2020, September 16). *Term Deposit Definition*. Investopedia. https://www.investopedia.com/terms/t/termdeposit.asp. \n",
+    "4. Chen, J. (2020, September 16). *Term Deposit Definition*. Investopedia. https://www.investopedia.com/terms/t/termdeposit.asp. \n",
     "\n",
-    "Savings, C. C. (2020, October 20). *All about term deposits.* The Help Hub. https://blog.coastcapitalsavings.com/managing-your-money/all-about-term-deposits/. \n",
+    "5. Savings, C. C. (2020, October 20). *All about term deposits.* The Help Hub. https://blog.coastcapitalsavings.com/managing-your-money/all-about-term-deposits/. \n",
     "\n",
-    "*Term Deposits in 2021: A Complete Guide.* Term Deposits in 2021: A Complete Guide | Island Savings. (n.d.). https://www.islandsavings.ca/simple-advice/investing-advice/term-deposits-guide."
+    "6. *Term Deposits in 2021: A Complete Guide.* Term Deposits in 2021: A Complete Guide | Island Savings. (n.d.). https://www.islandsavings.ca/simple-advice/investing-advice/term-deposits-guide."
    ]
   }
  ],
